force-app/main/default/objects/Payment__c/fields/Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Name__c</fullName>
    <formula>Invoice__r.Clinic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Name</label>
    <type>Text</type>
</CustomField>