force-app/main/default/objects/Payment__c/fields/Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Applied</label>
    <type>Checkbox</type>
</CustomField>