force-app/main/default/objects/Payment__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>