force-app/main/default/objects/Payment__c/recordTypes/Prepayment.recordType-meta.xml
<RecordType>
    <fullName>Prepayment</fullName>
    <active>true</active>
    <label>Prepayment</label>
</RecordType>