force-app/main/default/objects/Payment__c/listViews/All_payments.listView-meta.xml
<ListView>
    <fullName>All_payments</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All payments</label>
    <sharedTo>
        <group>Life_Fertility_Admin</group>
    </sharedTo>
</ListView>