force-app/main/default/objects/Payment__c/listViews/Yesterdays_Payments.listView-meta.xml
<ListView>
    <fullName>Yesterdays_Payments</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Patient_Donor__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterdays Payments</label>
    <sharedTo>
        <group>Life_Fertility_Admin</group>
    </sharedTo>
</ListView>